[package]
name = "proper"
version = "0.1.1"
authors = ["Nick Hynes <nhynes@oasislabs.com>"]
edition = "2018"
description = "Derives for converting primitives to and from simple enums and newtype structs"
readme = "README.md"
repository = "https://github.com/nhynes/proper"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4"
quote = "0.6"
syn = { version = "0.15", features = ["full", "extra-traits"] }
