[package]
name = "proper"
version = "0.1.5"
authors = ["Nick Hynes <nhynes@oasislabs.com>"]
edition = "2018"
description = "Derives for converting primitives to and from simple enums and newtype structs"
readme = "README.md"
repository = "https://github.com/nhynes/proper"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
